traefik/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: http
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`ktpro-alpha.keytop.cn`)
      kind: Rule
      services:
        - name: group-parking
          port: 80
      middlewares:
        - name: https-redirect

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: https
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ktpro-alpha.keytop.cn`)
      kind: Rule
      services:
        - name: group-parking
          port: 80
  tls: 
    secretName: k3s-ingress-secret

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
spec:
  redirectScheme:
    scheme: https
    permanent: true
